--- a/src/views/admin.hbs
+++ b/src/views/admin.hbs
@@ -1,1 +1,13 @@
-<p>Menu del Administrador</p>
+<div>
+    <div>
+        <h4>Menú del Administrador</h4>
+        <label for="txt_var1">Variable 1</label>
+        <input type="text" name="txt_var1" id="txt_var1"><br>
+        <label for="txt_var2">Variable 2</label>
+        <input type="text" name="txt_var2" id="txt_var2"><br>
+        <label for="txt_var3">Variable 3</label>
+        <input type="text" name="txt_var3" id="txt_var3"><br><br>
+        <input type="button" value="Enviar" name="btn-enviar" id="btn_enviar">
+    </div>
+
+</div>
