--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,1 +1,9 @@
-<div id="contenido"></div>
+<div class="contenedor-principal">
+    <div class="contenedor-encabezado">
+        <div class="contenedor-logo" id="contenedor-logo"></div>
+        <div class="contenedor-cotizador" id="contenedor-cotizador"></div>
+    </div>
+    <div class="contenedor-slider" id="contenedor-slider">
+        <img id="img-slider" class="img-slider">
+    </div>
+</div>
