--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -135,3 +135,11 @@ body {
 	padding: 10px;
 	margin: auto;
 }
+
+#sub-grupal{
+	display: inline-block;
+}
+
+#sub-sucursal{
+	display: inline-block;
+}
