--- a/src/views/admin.hbs
+++ b/src/views/admin.hbs
@@ -1,7 +1,7 @@
 {{>menubar}}
 <div class="div-main mt-2 lbl-gral" id="div-pp">
     <div class="div-body mt-2">
-        <div>
+        <div class="div-contenido">
             <div style="display: inline-block">
                 <label style="font-weight: bold" for="select-type">Seleccione Tipo de Actualización: </label>
                 <select class="caja-texto" name="select-type" id="select-type">
