--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/style_admin.css">
 <div class="container" style="width: 30vw; margin: 30px auto">
     <div class="card bg-light">
         <div class="card-header">
