--- a/src/views/partials/menubar.hbs
+++ b/src/views/partials/menubar.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/admin/main">Home</a>
+    <a class="navbar-brand" href="/admin/main">Inicio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -12,10 +12,12 @@
                     Sucursales
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Agregar</a>
+                    <a class="dropdown-item" href="/altasucursal">Agregar</a>
                     <a class="dropdown-item" href="#">Modificar</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Administrador</a>
+                    <a class="dropdown-item" href="#">Grupos</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Configuracón</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -24,7 +26,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Admin
+                    Administración
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Usuarios</a>
