--- a/src/views/partials/menubar.hbs
+++ b/src/views/partials/menubar.hbs
@@ -12,7 +12,7 @@
                     Sucursales
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/altasucursal">Agregar</a>
+                    <a class="dropdown-item" href="/admin/altasucursal">Agregar</a>
                     <a class="dropdown-item" href="#">Modificar</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Grupos</a>
