--- a/src/views/altasucursal.hbs
+++ b/src/views/altasucursal.hbs
@@ -16,8 +16,8 @@
                     <input type="text" class="form-control" id="sucursal_name" name="sucursal_name" /required>
                 </div>
                 <div class="form-group">
-                    <label class="lbl_black" for="combo_grupo">Grupo de Sucursal:</label><button id="btn-agregargrupo" type="button" class="btnm">+</button>
-                    <select class="form-control" name="combo_grupo" id="combo_grupo">
+                    <label class="lbl_black" for="team_id">Grupo de Sucursal:</label><button id="btn-agregargrupo" type="button" class="btnm">+</button>
+                    <select class="form-control" name="team_id" id="team_id">
                         {{#each data_team}}
                             <option value="{{team_id}}">{{team_name}}</option>
                         {{/each}}
