--- a/src/views/cargadatossuc.hbs
+++ b/src/views/cargadatossuc.hbs
@@ -1,3 +1,13 @@
 <link rel="stylesheet" href="/css/style_admin.css">
 {{>menubar}}
-<p>{{sucursal_id}}</p>
+<div class="container p-1">
+    <div class="row">
+        <div class="col-md-12 p-1">
+            <div class="card">
+                <div class="card-body">
+                    <p class="m-1 lbl-card"> &nbsp; Sucursal: {{sucursal_name}} &nbsp;-&nbsp; Código Suc: {{sucursal_id}} &nbsp; > &nbsp;  Grupo: {{team_id}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
