--- a/src/views/cargadatossuc.hbs
+++ b/src/views/cargadatossuc.hbs
@@ -5,7 +5,7 @@
         <div class="col-md-12 p-1">
             <div class="card">
                 <div class="card-body">
-                    <p class="m-1 lbl-card"> &nbsp; Sucursal: {{sucursal_name}} &nbsp;-&nbsp; Código Suc: {{sucursal_id}} &nbsp; > &nbsp;  Grupo: {{team_id}}</p>
+                    <p class="m-1 lbl-card"> &nbsp; Sucursal: {{sucursal_name}} &nbsp;-&nbsp; Código Suc: {{sucursal_id}} &nbsp; > &nbsp;  Grupo: {{team_name}}</p>
                 </div>
             </div>
         </div>
