--- a/src/views/cargadatossuc.hbs
+++ b/src/views/cargadatossuc.hbs
@@ -7,7 +7,43 @@
                 <div class="card-body">
                     <p class="m-1 lbl-card"> &nbsp; Sucursal: {{sucursal_name}} &nbsp;-&nbsp; Código Suc: {{sucursal_id}} &nbsp; > &nbsp;  Grupo: {{team_name}}</p>
                 </div>
+                <div class="table-responsive">
+
+                    <table class="table w-auto">
+                        <thead>
+                            <td>Titulo 1</td>
+                            <td>Titulo 2</td>
+                            <td></td>Titulo 3</td>
+                        </thead>
+                        <tr>
+                            <td><input type="text" name="header_title1" id="header_title1"></td>
+                            <td><input type="text" name="header_title2" id="header_title2"></td>
+                            <td><input type="text" name="header_title3" id="header_title3"></td>
+                        </tr>
+                        <tr>
+                            <td>Sub-Titulo 1-1</td>
+                            <td>Sub-Titulo 1-2</td>
+                            <td>Sub-Titulo 2-1</td>
+                            <td>Sub-Titulo 2-2</td>
+                            <td>Sub-Titulo 3-1</td>
+                            <td>Sub-Titulo 3-2</td>
+                        </tr>
+                        <tr>
+                            <td><input type="text" name="" id=""></td>
+                            <td><input type="text" name="" id=""></td>
+                            <td><input type="text" name="" id=""></td>
+                            <td><input type="text" name="" id=""></td>
+                            <td><input type="text" name="" id=""></td>
+                            <td><input type="text" name="" id=""></td>
+                        </tr>
+                    </table>
+
+
+                </div>
+
+
             </div>
         </div>
     </div>
 </div>
+
