--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -84,9 +84,16 @@ body {
     font-style: oblique;
     font-size: 20px;
     color: #1D1B8A;
-    background: #F7971E;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: RGB(234,170,0);;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFD200, #EAAA00);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFD200, #EAAA00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */	
+
+	/*
+	background: #F7971E;  /* fallback for old browsers */
+	/*
+	background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */
+	/*
+	background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .contenedor-slider {
